[gd_scene load_steps=2 format=2]

[ext_resource path="res://world/utils/physics/atoms/input_event/InputDetectionZone.gd" type="Script" id=1]

[node name="InputDetectionZone" type="Area2D"]
script = ExtResource( 1 )

[node name="ClickableArea" type="CollisionShape2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_InputDetectionZone_input_event"]
